# QK-Chat

./: .clang-format  .gitignore  CLAUDE.md  Makefile  Makefile.Debug  README.md  邮箱注册重构.txt
.cursor/rules/: development-rule.mdc
.trae/rules/: project_rules.md
client/: CMakeLists.txt  README.md  Resource.qrc
client/config/: logging.conf
client/qml/: ChatMainWindow.qml  EmailVerificationDialog.qml  LoginWindow.qml  RegisterWindow.qml  main.qml
client/qml/components/: AddPage.qml  ChatWindow.qml  ContactsPage.qml  CustomTextField.qml  DefaultPage.qml  EmojiPicker.qml  GroupsPage.qml  MessageBubble.qml  ProfilePage.qml  SettingsPage.qml  SideBarButton.qml
client/src/: main.cpp
client/src/config/: ConfigManager.cpp  ConfigManager.h  DevelopmentConfig.cpp  DevelopmentConfig.h
client/src/controllers/: ChatController.cpp  ChatController.h  UserController.cpp  UserController.h
client/src/crypto/: CryptoManager.cpp  CryptoManager.h
client/src/database/: LocalDatabase.cpp  LocalDatabase.h
client/src/models/: UserModel.cpp  UserModel.h
client/src/monitoring/: ConnectionMonitor.cpp  ConnectionMonitor.h  DiagnosticTool.cpp  DiagnosticTool.h
client/src/network/: ConnectionPool.cpp  ConnectionPool.h  ConnectionStateManager.cpp  ConnectionStateManager.h  ErrorHandler.cpp  ErrorHandler.h  HeartbeatManager.cpp  HeartbeatManager.h  NetworkClient.cpp  NetworkClient.h  ReconnectManager.cpp  ReconnectManager.h  SSLConfigManager.cpp  SSLConfigManager.h
client/src/utils/: DiagnosticManager.h  FileTransferManager.cpp  FileTransferManager.h  LogManager.cpp  LogManager.h  LogViewer.h  MonitorManager.cpp  MonitorManager.h  ThreadPool.cpp  ThreadPool.h  Validator.cpp  Validator.h
client/tests/: DiagnosticToolTest.cpp
server/: CMakeLists.txt  README.md
server/config/: database_config.sql  dev.conf  redis.conf  ssl_config.cnf
server/data/: mysql_init.sql  mysql_init_fixed.sql
server/scripts/: README.md  diagnose_startup_issues.ps1  safe_db_init.bat
server/src/: main.cpp
server/src/admin/: AdminWindow.cpp  AdminWindow.h  DashboardWidget.cpp  DashboardWidget.h  LoginDialog.cpp  LoginDialog.h  LoginDialog.ui
server/src/cache/: CacheManager.cpp  CacheManager.h  CacheManagerV2.cpp  CacheManagerV2.h  CachePreloader.cpp  CachePreloader.h  CacheStrategyManager.cpp  CacheStrategyManager.h  MultiLevelCache.cpp  MultiLevelCache.h  RedisClient.cpp  RedisClient.h
server/src/config/: ServerConfig.cpp  ServerConfig.h
server/src/core/: ArchitectureOptimizer.cpp  ArchitectureOptimizer.h  ChatClientConnection.cpp  ChatClientConnection.h  ChatServer.cpp  ChatServer.h  ConnectionManager.cpp  ConnectionManager.h  EnhancedChatServer.cpp  EnhancedChatServer.h  GroupManager.cpp  GroupManager.h  MessageEngine.cpp  MessageEngine.h  MessageHandlers.cpp  MessageHandlers.h  RobustnessManager.cpp  RobustnessManager.h  SessionManager.cpp  SessionManager.h  StackTraceCollector.cpp  StackTraceCollector.h  ThreadManager.cpp  ThreadManager.h  ThreadSafetyEnhancements.cpp  ThreadSafetyEnhancements.h
server/src/crypto/: CryptoManager.cpp  CryptoManager.h
server/src/database/: Database.cpp  Database.h  DatabaseOptimizer.cpp  DatabaseOptimizer.h  DatabasePool.cpp  DatabasePool.h
server/src/docs/: ThreadSafetySolutionGuide.md
server/src/network/: NetworkEventHandler.cpp  NetworkEventHandler.h  NonBlockingConnectionManager.cpp  NonBlockingConnectionManager.h  ProtocolParser.cpp  ProtocolParser.h  QSslServer.cpp  QSslServer.h
server/src/services/: EmailService.cpp  EmailService.h  EmailTemplate.cpp  EmailTemplate.h  EmailVerificationService.cpp  EmailVerificationService.h  RedisService.cpp  RedisService.h  SimpleSmtpClient.cpp  SimpleSmtpClient.h
server/src/utils/: AdminAuth.cpp  AdminAuth.h  AdminManager.cpp  AdminManager.h  AutoRecovery.cpp  AutoRecovery.h  LockFreeStructures.h  LogManager.cpp  LogManager.h  PerformanceProfiler.h  RedisEmailVerification.cpp  RedisEmailVerification.h  StackTraceLogger.cpp  StackTraceLogger.h  SystemMonitor.cpp  SystemMonitor.h  ThreadPool.cpp  ThreadPool.h
server/tests/: CacheSystemTest.h  PerformanceTest.h
测试脚本/诊断脚本/: quick_diagnosis.ps1
测试脚本/邮件服务测试/: smtp_status_report.ps1
笔记/: 终端命令.md  资源文件.md  配置清单-Linux.md  配置清单-Windows.md
笔记/问题/: 切换主题按钮失效.md
草稿文档/: 初步设计.md  开发规范-0.0V.md  开发规范-0.1V.md
设计文档/: 客户端架构.md  技术架构.md  服务器端架构.md  设计模式.md  项目结构.md
